--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
+    "mongoose": "^6.2.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15"
   }
