--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.0.0"
   }
 }
