--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "express": "~4.16.1",
     "express-flash": "github:RGBboy/express-flash",
     "express-session": "^1.17.2",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
