--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "dev": "nodemon app.js"
   },
   "dependencies": {
