--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www",
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "dev": "nodemon app.js"
+    "build": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
