--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0"
+  },
+  "engines": {
+    "node": "v16.14.2"
   }
 }
